[project]
name = "zulip-doc"
version = "0.1.0"
description = "Zulip service that checks user presence for Duty of Care responsibilities for remote teams"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "zulip>=0.8.2",
    "typer>=0.9.0",
    "humanize>=4.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
zdoc = "zdoc.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
