[project]
name = "zulip-doc"
dynamic = ["version"]
description = "Zulip service that checks user presence for Duty of Care responsibilities for remote teams"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "zulip>=0.8.2",
    "typer>=0.9.0",
    "humanize>=4.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
zdoc = "zdoc.main:app"

[project.urls]
homepage = "https://github.com/pizzapanther/zulip-doc"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]

[tool.pdm.version]
source = "file"
path = "zdoc/__init__.py"

[tool.pdm.scripts]
_.env_file = ".env"
publish = "pdm publish --username __token__ --password $PDM_PUBLISH_PASSWORD"
